...
    
    var accessibilityIdentifier: String {
        switch self {
        case .Ranking:      return "rankingTabViewElement"
        case .Reviews:      return "citiesReviewsTabViewElement"
        case .SearchTravel: return "travelSearchTabViewElement"
        case .MyTravels:    return "myTravelsTabViewElement"
        case .Dashboard:    return "dashboardTabViewElement"
        case .UserPreferences: return "userPreferencesTabViewElement"
        }
    }
}

